@@ -852,3 +852,84 @@ wfprov	http://purl.org/wf4ever/wfprov#	20120905
 category	http://dbpedia.org/resource/Category:	20120917
 ero	http://purl.obolibrary.org/obo/	20120917
 interval	http://reference.data.gov.uk/def/intervals/	20120917
+adms	http://www.w3.org/ns/adms#	20130208
+aersv	http://aers.data2semantics.org/vocab/	20130208
+agg	http://purl.org/twc/health/vocab/aggregate/	20130208
+apivc	http://purl.org/linked-data/api/vocab#	20130208
+arpfo	http://vocab.ouls.ox.ac.uk/projectfunding#	20130208
+asn	http://purl.org/ASN/schema/core/	20130208
+atomrdf	http://atomowl.org/ontologies/atomrdf#	20130208
+b2bo	http://purl.org/iig2/b2bo#	20130208
+bd	http://www.bigdata.com/rdf/search#	20130208
+bing	http://bing.com/schema/media/	20130208
+biopax	http://bio2rdf.org/ns/biopax#	20130208
+bne	http://datos.bne.es/resource/	20130208
+bp	http://open-services.net/ns/basicProfile#	20130208
+bte	http://purl.org/twc/vocab/between-the-edges/	20130208
+cidoccrm	http://purl.org/NET/cidoc-crm/core#	20130208
+cv	http://purl.org/captsolo/resume-rdf/0.2/cv#	20130208
+daisy	http://www.daisy.org/z3998/2012/vocab/	20130208
+dce	http://purl.org/dc/elements/1.1/	20130208
+dco	http://deepcarbon.net/	20130208
+dcr	http://www.isocat.org/ns/dcr.rdf#	20130208
+disco	http://vocab.ddialliance.org/discovery#	20130208
+dita	http://zebrana.net/dita/ditavoc.ttl#	20130208
+dnb	http://d-nb.info/gnd/	20130208
+dsp	http://purl.org/metainfo/terms/dsp#	20130208
+dssn	http://purl.org/net/dssn/	20130208
+ekaw	http://data.semanticweb.org/conference/ekaw/2012/complete/	20130208
+ens	http://models.okkam.org/ENS-core-vocabulary.owl#	20130208
+eseduc	http://www.purl.org/ontologia/eseduc#	20130208
+fd	http://foodable.co/ns/	20130208
+food	http://data.lirmm.fr/ontologies/food#	20130208
+fos	http://futurios.org/fos/spec/	20130208
+gawd	http://gawd.atlantides.org/terms/	20130208
+genea	http://www.owl-ontologies.com/generations.owl#	20130208
+geocontext	http://www.geocontext.org/publ/2013/vocab#	20130208
+geoes	http://geo.linkeddata.es/ontology/	20130208
+gsp	http://www.opengis.net/ont/geosparql#	20130208
+gxa	http://www.ebi.ac.uk/gxa/	20130208
+health	http://purl.org/twc/health/vocab/	20130208
+hgnc	http://bio2rdf.org/hgnc:	20130208
+icaltzd	http://www.w3.org/2002/12/cal/icaltzd#	20130208
+idemo	http://rdf.insee.fr/graphes/def/demo#	20130208
+igeo	http://rdf.insee.fr/def/geo#	20130208
+jjd	http://www.joshuajeeson.com/	20130208
+kdo	http://kdo.render-project.eu/kdo#	20130208
+l4a	http://labels4all.info/ns/	20130208
+laposte	http://data.lirmm.fr/ontologies/laposte#	20130208
+ldp	http://www.w3.org/ns/ldp#	20130208
+lex	http://purl.org/lex#	20130208
+lyou	http://purl.org/linkingyou/	20130208
+marshall	http://sites.google.com/site/xgmaitc/	20130208
+md	http://www.w3.org/ns/md#	20130208
+media	http://purl.org/microformat/hmedia/	20130208
+metalex	http://www.metalex.eu/schema/1.0#	20130208
+nfo	http://www.semanticdesktop.org/ontologies/nfo/#	20130208
+nxp	http://purl.org/nxp/schema/v1/	20130208
+oa	http://www.w3.org/ns/openannotation/core/	20130208
+oarj	http://opendepot.org/reference/linked/1.0/	20130208
+oax	http://www.w3.org/ns/openannotation/extensions/	20130208
+osn	http://spatial.ucd.ie/lod/osn/	20130208
+owltime	http://www.w3.org/TR/owl-time#	20130208
+particip	http://purl.org/vocab/participation/schema#	20130208
+person	http://www.w3.org/ns/person#	20130208
+photoshop	http://ns.adobe.com/photoshop/1.0/	20130208
+pingback	http://purl.org/net/pingback/	20130208
+prefix	http://prefix.cc/	20130208
+pronom	http://reference.data.gov.uk/technical-registry/	20130208
+prv	http://purl.org/net/provenance/ns#	20130208
+qa	http://www.mit.jyu.fi/ai/TRUST_Ontologies/QA.owl#	20130208
+qud	http://qudt.org/1.1/schema/qudt#	20130208
+rad	http://www.w3.org/ns/rad#	20130208
+rov	http://www.w3.org/ns/regorg#	20130208
+ssso	http://purl.org/ontology/ssso#	20130208
+strdf	http://strdf.di.uoa.gr/ontology#	20130208
+tisc	http://observedchange.com/tisc/ns#	20130208
+uco	http://purl.org/uco/ns#	20130208
+viaf	http://viaf.org/ontology/1.1/#	20130208
+visit	http://purl.org/net/vocab/2004/07/visit#	20130208
+w3po	http://purl.org/provenance#	20130208
+wn20	http://www.w3.org/2006/03/wn/wn20/	20130208
+xmls	http://www.w3.org/2001/XMLSchema#	20130208
+xro	http://purl.org/xro/ns#	20130208
