@@ -1,3 +1,6 @@
+20130208 (914 prefixes)
+  added: adms,aersv,agg,apivc,arpfo,asn,atomrdf,b2bo,bd,bing,biopax,bne,bp,bte,cidoccrm,daisy,dce,dco,dcr,disco,dita,dnb,dsp,dssn,ekaw,ens,eseduc,fd,food,fos,gawd,genea,geocontext,gsp,gxa,health,hgnc,icaltzd,idemo,igeo,jjd,kdo,l4a,laposte,ldp,lex,lyou,marshall,md,nxp,oa,oarj,oax,osn,owltime,particip,person,photoshop,pingback,prefix,pronom,qa,qud,rad,rov,ssso,strdf,tisc,uco,viaf,visit,w3po,wn20,xmls
+  changed: cv,geoes,media,metalex,nfo,prv,xro
 20120917 (840 prefixes)
   added: category,ero,interval
 20120905 (837 prefixes)
